--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
-				<a href="index.html"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
+				<a href="index.html"><h2>T Royal</h2></a>
 			</div>
 
 			<!-- Icon header -->
